# mhwaveedit

./: .gitignore  ChangeLog  INSTALL  Makefile.am  NEWS  configure.ac  configure.in
.github/workflows/: build.yml  codeql-analysis.yml
docgen/: D08_files.doc
m4/: Makefile.am
po/: Makevars  de.po  es.po  fr.po  it.po  mhwaveedit.pot  pl.po  ru.po  sv.po  zh_CN.po
share/: Makefile.am
src/: Makefile.am  chunkview.c  dataformat.c  help.c  inifile.c  inifile.h  main.c  main.h  mainloop.c  mainloop.h  mainwindow.c  pipedialog.c  player.c  rateest.c  session.c  sound-alsalib.c  sound-esound.c  sound-oss.c  sound-portaudio.c  sound-pulse.c  tempfile.c  vu_meter.c  vu_meter.h
